# time-series-analysis-in-earth-science

./: 2025-05-25_Time-Series-Analysis-in-Earth-Science-2cf523815b47.py  README.md  Wavelet for exoplanets.ipynb  Wavelet for exoplanets.py  article.md  earthpy colorado river.ipynb  earthpy colorado river.py  pyproject.toml
